# tidalsight

./: .gitignore  .mise.toml  README.md  REPORT_CARD.md  celery_railway.json  main.py  manage.py  package.json  pyproject.toml  railpack.json  railway.json  vite.config.js
.github/workflows/: lint.yml
analyst/: app_behaviour.py  apps.py  grounding.py  llms.py  runner.py  tasks.py  utils.py
analyst/agents/: asset_analyst.py  description_agent.py  external_risk_agent.py  finance_agent.py  financial_health_agent.py  leadership_agent.py  market_digest.py  overall_assessment_agent.py  peer_discovery.py  people_agent.py  personal_outlook.py  product_agent.py  product_flywheel_agent.py  provider.py  revision_agent.py  risk_agent.py  sentiment_agent.py  tools.py  valuation_agent.py
analyst/managers/: description_manager.py  digest_manager.py  external_risk_manager.py  finance_manager.py  financial_health_manager.py  leadership_manager.py  overall_assessment_manager.py  peer_manager.py  people_manager.py  personal_outlook_manager.py  product_flywheel_manager.py  product_manager.py  revision_manager.py  risk_manager.py  sentiment_manager.py  valuation_manager.py  valuation_score_manager.py
core/: admin.py  app_behaviour.py  constants.py  context_processors.py  forms.py  middleware.py  models.py  sitemap.py  sparkline.py  urls.py  utils.py  views.py
core/managers/: fundamental_manager.py  user_manager.py  valuation_manager.py
core/migrations/: 0001_initial.py  0002_add_userasset_remove_watchlist.py
core/templates/: 403.html  404.html  500.html  base.html
core/templatetags/: formatting.py  vite.py
railway/: ts.json
scraper/: admin.py  app_behaviour.py  constants.py  embeddings.py  models.py  tasks.py
scraper/clients/: brave_client.py  hn_client.py  reddit_client.py  yfinance_client.py
scraper/managers/: asset_manager.py  brave_news_manager.py  hn_manager.py  keyword_matcher.py  reddit_manager.py
scraper/migrations/: 0001_initial.py  0002_news_newsassetimpact_news_assets.py  0003_redditpost.py  0004_redditpost_embedding_alter_pricehistory_timestamp.py  (+17 more)
tidalsight/: __init__.py  asgi.py  celery.py  urls.py  views.py  wsgi.py
(+67 files in other folders)
