[project]
name = "tidalsight"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django",
    "django-redis",
    "gunicorn",
    "psycopg[binary,pool]",
    "python-dotenv",
    "httpx",
    "uvicorn",
    "whitenoise",
    "yfinance",
    "byteplus-python-sdk-v2>=3.0.33",
    "pydantic",
    "sniffio",
    "distro",
    "openai-agents>=0.10.5",
    "pgvector>=0.4.2",
]
